--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 				</p>
 			</span>
 			<br>
-			<h2 style="color:#40c6ee"><em>RECOMENDADOS PELO PROFESSOR IVO:</em>:</h2>
+			<h2 style="color:#40c6ee"><em>RECOMENDADOS PELO PROFESSOR IVO:</em></h2>
 			<hr>
 			<span id="Hipsters Ponto Tech">
 				<p style="font-size: 150%">
